--- a/showup.html
+++ b/showup.html
@@ -1,10 +1,10 @@
 {
-  "Visibility": "VISIBLE",
+  "Visibility": "INVISIBLE",
   "Title": "UPDATE",
   "Description": "Segera update ke versi terbaru",
   "MainTextButton": "Update",
   "Cancelable": "false",
   "CancelButtonText": "Cancel",
   "DownloadLink": "https://youtube.com/channel/UCZH_K3JRAL3Wzr8M5UjKxKQ",
-  "Version": "1.0"
+  "Version": "1.1"
 }
