--- a/showup.html
+++ b/showup.html
@@ -1,5 +1,5 @@
 {
-  "Visibility": "INVISIBLE",
+  "Visibility": "VISIBLE",
   "Title": "UPDATE",
   "Description": "Segera update ke versi terbaru",
   "MainTextButton": "Update",
